# crud_generator

./: .gitignore  LICENSE  README.md  ROADMAP.md  cli.py  pyproject.toml
crud_generator/: config_parser.py  config_schema.py  generator.py
crud_generator/templates/: alembic.ini.j2  alembic_env.py.j2  alembic_readme.md.j2  crud_routes.py.j2  database.py.j2  main.py.j2  model.py.j2
examples/: example_config.yaml  mysql_config.yaml  postgres_config.yaml
tests/: test_cli_smoke.py  test_config_parser.py  test_config_validation.py  test_database_template.py  test_generator.py  utils.py
