[tool.poetry]
name = "crud-generator"
version = "0.1.0"
description = ""
authors = ["Chris Tomlin <tomlinc@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pyyaml = "^6.0.2"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
jinja2 = "^3.1.5"


[tool.poetry.group.dev.dependencies]
typer = "^0.15.1"
pytest = "^8.3.4"
pytest-cov = "^5.0.0"
uvicorn = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
